--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <button>SHOOT</button>
@@ -19,7 +19,7 @@
         <script src="Camera.js"></script>
         <script src="CameraSet.js"></script>
         <script src="main.js"></script>
-
+<canvas id="c" height="720" width="960" />
     </body>
 </html>
 
