Hacky slow video mode to ease calibration

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
     <body>
         <button>SHOOT</button>
+        <canvas id="canvas1" height="720" width="960"></canvas>
+        <canvas id="canvas2" height="720" width="960"></canvas>
 
         <script src="vendor/jquery/dist/jquery.min.js"></script>
         <script src="vendor/lodash/dist/lodash.min.js"></script>
@@ -19,7 +21,7 @@
         <script src="Camera.js"></script>
         <script src="CameraSet.js"></script>
         <script src="main.js"></script>
-<canvas id="c" height="720" width="960" />
+
     </body>
 </html>
 
