Add Alice quotes and speech synth, prevent overlapping triggers

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <body>
         <div id="container">
             <p id="instructions">
-                Get central and touch the pads
+                Get central and briefly touch the pads
             </p>
             <div id="input" class="on">
                 <canvas id="canvas1" height="720" width="960"></canvas>
                 <canvas id="canvas2" height="720" width="960"></canvas>
+                <video id="video" height="720" width="960" class="off"></video>
             </div>
 
             <img id="output" class="off" />
@@ -30,8 +31,12 @@
 
         <script src="Canvas2Image.js"></script>
 
+
+        <script src="quotes.js"></script>
+
         <script src="Camera.js"></script>
         <script src="CameraSet.js"></script>
+        <script src="Alice.js"></script>
         <script src="main.js"></script>
 
     </body>
